CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(vision)

# Stander of CPP
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED True)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

# Path of HikCameraSDK
SET(HIK_CMAERA_DIR ${CMAKE_SOURCE_DIR}/3rdparty/HikCamera)
SET(HIK_CMAERA_INCLUDE_DIR ${HIK_CMAERA_DIR}/include)
SET(HIK_CMAERA_LIB_DIR ${HIK_CMAERA_DIR}/lib)

# Path of header
SET(SFS_CMAKE_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${SFS_CMAKE_INCLUDE_DIR})

# OpenCV
FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

# HikCamera
INCLUDE_DIRECTORIES(${HIK_CMAERA_INCLUDE_DIR})


# Find HikVisionlibs
FILE(GLOB HikVisionLibs ${HIK_CMAERA_LIB_DIR}/lib*.so)
# FILE(GLOB HikVisionLibs
#     ${HIK_CAMERA_LIB_DIR}/libMvCameraControl.so
#     ${HIK_CAMERA_LIB_DIR}/libMVGigEVisionSDK.so
#     ${HIK_CAMERA_LIB_DIR}/libMvUsb3vTL.so
# )
MESSAGE(STATUS "HikVision Libraries: ${HikVisionLibs}")

ADD_EXECUTABLE(CatchPhoto ${CMAKE_SOURCE_DIR}/src/CatchPhoto.cpp)

TARGET_LINK_LIBRARIES(CatchPhoto ${OpenCV_LIBS} ${HikVisionLibs})

